--- a/.github/workflows/dependabot_approve_and_label.yml
+++ b/.github/workflows/dependabot_approve_and_label.yml
@@ -42,10 +42,11 @@ jobs:
           echo "is_interesting_package (merge) : ${{ steps.parse_dependabot_pr_automerge.outputs.is_interesting_package }}"
           echo "is_interesting_package (release) : ${{ steps.parse_dependabot_pr_autorelease.outputs.is_interesting_package }}"
           echo "semver_increment : ${{ steps.parse_dependabot_pr_automerge.outputs.semver_increment }}"
-  approve_and_label:
+
+  approve:
     runs-on: ubuntu-latest
     needs: evaluate_dependabot_pr
-    name: Approve and label
+    name: Approve
     if: |
       (github.actor == 'dependabot[bot]' || github.actor == 'nektos/act') &&
       github.event_name == 'pull_request'
@@ -92,8 +93,15 @@ jobs:
               pull_number: context.payload.pull_request.number,
               body: "Bumps '${{needs.evaluate_dependabot_pr.outputs.dependency_name}}' from ${{needs.evaluate_dependabot_pr.outputs.version_from}} to ${{needs.evaluate_dependabot_pr.outputs.version_to}}"
             })
+
+  label:
+    runs-on: ubuntu-latest
+    needs: evaluate_dependabot_pr
+    name: Label
+    steps:
       - name: 'Label with "autosquash"'
         if: |
+          github.actor == 'dependabot[bot]' &&
           needs.evaluate_dependabot_pr.outputs.is_auto_merge_candidate == 'True' &&
           (needs.evaluate_dependabot_pr.outputs.semver_increment == 'minor' || needs.evaluate_dependabot_pr.outputs.semver_increment == 'patch')
         env: 
@@ -110,6 +118,7 @@ jobs:
             })
       - name: 'Label with "pending_release"'
         if: |
+          github.actor != 'dependabot[bot]' ||
           needs.evaluate_dependabot_pr.outputs.is_auto_release_candidate == 'True'
         uses: actions/github-script@v2
         with:
