--- a/.github/workflows/dependabot_approve_and_label.yml
+++ b/.github/workflows/dependabot_approve_and_label.yml
@@ -40,24 +40,9 @@ jobs:
           echo "is_interesting_package (release) : ${{ steps.parse_dependabot_pr_autorelease.outputs.is_interesting_package }}"
           echo "semver_increment : ${{ steps.parse_dependabot_pr_automerge.outputs.semver_increment }}"
 
-  generate_token:
-    runs-on: ubuntu-latest
-    name: Generate GitHub App Token
-    outputs:
-      token: ${{ steps.generate_token.outputs.token }}
-    steps:
-      - name: Generate token
-        id: generate_token
-        uses: tibdex/github-app-token@v1
-        with:
-          app_id: ${{ secrets.ENDJIN_BOT_APP_ID }}
-          private_key: ${{ secrets.ENDJIN_BOT_PRIVATE_KEY }}
-
   approve:
     runs-on: ubuntu-latest
-    needs: 
-      - evaluate_dependabot_pr
-      - generate_token
+    needs: evaluate_dependabot_pr
     name: Approve
     if: |
       (github.actor == 'dependabot[bot]' || github.actor == 'nektos/act') &&
@@ -74,13 +59,19 @@ jobs:
           echo "to_version       : ${{needs.evaluate_dependabot_pr.outputs.version_to}}"
           echo "<------------------------------------------------>"
         shell: bash
+      - name: Generate token
+        id: generate_token
+        uses: tibdex/github-app-token@v1
+        with:
+          app_id: ${{ secrets.ENDJIN_BOT_APP_ID }}
+          private_key: ${{ secrets.ENDJIN_BOT_PRIVATE_KEY }}
       - name: Approve pull request
         if: |
           needs.evaluate_dependabot_pr.outputs.is_auto_merge_candidate == 'True' &&
           (needs.evaluate_dependabot_pr.outputs.semver_increment == 'minor' || needs.evaluate_dependabot_pr.outputs.semver_increment == 'patch')
         uses: andrewmusgrave/automatic-pull-request-review@0.0.2
         with:
-          repo-token: '${{ needs.generate_token.outputs.token }}'
+          repo-token: '${{ steps.generate_token.outputs.token }}'
           event: APPROVE
           body: 'Thank you dependabot 🎊'
       - name: 'Update PR body'
@@ -89,7 +80,7 @@ jobs:
           (needs.evaluate_dependabot_pr.outputs.semver_increment == 'minor' || needs.evaluate_dependabot_pr.outputs.semver_increment == 'patch')
         uses: actions/github-script@v2
         with:
-          github-token: '${{ needs.generate_token.outputs.token }}'
+          github-token: '${{ steps.generate_token.outputs.token }}'
           script: |
             await github.pulls.update({
               owner: context.payload.repository.owner.login,
@@ -100,11 +91,15 @@ jobs:
 
   label:
     runs-on: ubuntu-latest
-    needs: 
-      - evaluate_dependabot_pr
-      - generate_token
+    needs: evaluate_dependabot_pr
     name: Label
     steps:
+      - name: Generate token
+        id: generate_token
+        uses: tibdex/github-app-token@v1
+        with:
+          app_id: ${{ secrets.ENDJIN_BOT_APP_ID }}
+          private_key: ${{ secrets.ENDJIN_BOT_PRIVATE_KEY }}
       - name: 'Label with "autosquash"'
         if: |
           (github.actor == 'dependabot[bot]' || github.actor == 'nektos/act') &&
@@ -112,7 +107,7 @@ jobs:
           (needs.evaluate_dependabot_pr.outputs.semver_increment == 'minor' || needs.evaluate_dependabot_pr.outputs.semver_increment == 'patch')
         uses: actions/github-script@v2
         with:
-          github-token: '${{ needs.generate_token.outputs.token }}'
+          github-token: '${{ steps.generate_token.outputs.token }}'
           script: |
             await github.issues.addLabels({
               owner: context.payload.repository.owner.login,
