--- a/.github/workflows/dependabot_approve_and_label.yml
+++ b/.github/workflows/dependabot_approve_and_label.yml
@@ -43,7 +43,7 @@ jobs:
   approve:
     runs-on: ubuntu-latest
     needs: evaluate_dependabot_pr
-    name: Approve
+    name: Approve auto-mergeable dependabot PRs
     if: |
       (github.actor == 'dependabot[bot]' || github.actor == 'nektos/act') &&
       needs.evaluate_dependabot_pr.outputs.is_auto_merge_candidate == 'True'
@@ -100,7 +100,7 @@ jobs:
         with:
           app_id: ${{ secrets.ENDJIN_BOT_APP_ID }}
           private_key: ${{ secrets.ENDJIN_BOT_PRIVATE_KEY }}
-      - name: 'Label with "autosquash"'
+      - name: 'Label auto-mergeable dependabot PRs with "autosquash"'
         if: |
           (github.actor == 'dependabot[bot]' || github.actor == 'nektos/act') &&
           needs.evaluate_dependabot_pr.outputs.is_auto_merge_candidate == 'True' &&
@@ -115,7 +115,7 @@ jobs:
               issue_number: context.payload.pull_request.number,
               labels: ['autosquash']
             })
-      - name: 'Label with "pending_release"'
+      - name: 'Label non-dependabot PRs and auto-releasable dependabot PRs with "pending_release"'
         if: |
           github.actor != 'dependabot[bot]' ||
           needs.evaluate_dependabot_pr.outputs.is_auto_release_candidate == 'True'
