--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -27,6 +27,9 @@ jobs:
   auto_merge:
     name: Auto-squash the PR
     runs-on: ubuntu-18.04
+    # Don't process PRs from forked repos
+    if:
+      github.event.pull_request.head.repo.full_name == github.repository
     steps:
       - name: Generate token
         id: generate_token
@@ -34,6 +37,29 @@ jobs:
         with:
           app_id: ${{ secrets.ENDJIN_BOT_APP_ID }}
           private_key: ${{ secrets.ENDJIN_BOT_PRIVATE_KEY }}
+      - name: Remove 'autosquash' label from closed PRs
+        id: remove_autosquash_label_from_closed_prs
+        uses: actions/github-script@v2
+        with:
+          github-token: '${{ steps.generate_token.outputs.token }}'
+          script: |
+            const pulls = await github.search.issuesAndPullRequests({
+              q: 'is:pr is:closed label:autosquash',
+            });
+            core.info(`pulls: ${pulls.data.items}`)
+            const repoUrl = `https://api.github.com/repos/${context.payload.repository.owner.login}/${context.payload.repository.name}`
+            const prs_to_unlabel = pulls.data.items.
+                                          filter(function (x) { return x.repository_url == repoUrl; }).
+                                          map(p=>p.number);
+            for (const i of prs_to_unlabel) {
+              core.info(`Removing label 'autosquash' from issue #${i}`)
+              github.issues.removeLabel({
+                owner: context.payload.repository.owner.login,
+                repo: context.payload.repository.name,
+                issue_number: i,
+                name: 'autosquash'
+              });
+            }
       - uses: endjin/autosquash@v2.2
         with:
           github_token: '${{ steps.generate_token.outputs.token }}'
