--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -6,13 +6,13 @@
 name: "CodeQL"
 
 on:
-  push:
-    branches: [master]
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [master]
-  schedule:
-    - cron: '0 10 * * 3'
+#   push:
+#     branches: [master]
+#   pull_request:
+#     # The branches below must be a subset of the branches above
+#     branches: [master]
+#   schedule:
+#     - cron: '0 10 * * 3'
 
 jobs:
   analyze:
