--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -4,6 +4,26 @@ on:
     types: [closed]
 
 jobs:
+  lookup_default_branch:
+    runs-on: ubuntu-latest
+    outputs:
+      branch_name: ${{ steps.lookup_default_branch.outputs.result }}
+    steps:
+    - name: Lookup default branch name
+      id: lookup_default_branch
+      uses: actions/github-script@v2
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          const repo = await github.repos.get({
+            owner: context.payload.repository.owner.login,
+            repo: context.payload.repository.name
+          });
+          return repo.data.default_branch
+    - name: Display default_branch_name
+      run: |
+        echo "default_branch_name : ${{ steps.lookup_default_branch.outputs.result }}"
+        
   check_for_norelease_label:
     runs-on: ubuntu-latest
     outputs:
@@ -32,7 +52,7 @@ jobs:
 
   check_ready_to_release:
     runs-on: ubuntu-latest
-    needs: check_for_norelease_label
+    needs: [check_for_norelease_label,lookup_default_branch]
     if: |
       needs.check_for_norelease_label.outputs.no_release == 'false'
     outputs:
@@ -45,12 +65,16 @@ jobs:
       uses: actions/github-script@v2
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
+        # find all open PRs that are targetting the default branch (i.e. main/master)
+        # return their titles, so they can parsed later to determine if they are
+        # Dependabot PRs and whether we should wait for them to be auto-merged before
+        # allowing a release event.
         script: |
           const pulls = await github.pulls.list({
             owner: context.payload.repository.owner.login,
             repo: context.payload.repository.name,
             state: 'open',
-            base: 'master'
+            base: needs.lookup_default_branch.outputs.branch_name
           });
           return JSON.stringify(pulls.data.map(p=>p.title))
         result-encoding: string
@@ -105,7 +129,7 @@ jobs:
 
   tag_for_release:
     runs-on: ubuntu-latest
-    needs: check_ready_to_release
+    needs: [check_ready_to_release,lookup_default_branch]
     if: |
       needs.check_ready_to_release.outputs.ready_to_release == 'true'
     steps:
@@ -115,6 +139,8 @@ jobs:
 
     - uses: actions/checkout@v2
       with:
+        # ensure we are creating the release tag on the default branch
+        ref: needs.lookup_default_branch.outputs.branch_name
         fetch-depth: 0
 
     - name: Install GitVersion
