--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -24,12 +24,28 @@ on:
   status: {}
 
 jobs:
+  check_pr_from_fork:
+    name: Check PR from fork
+    runs-on: ubuntu-18.04
+    outputs: 
+      is_forked_pr: ${{ steps.check_pr_source.outputs.result }}
+    steps:
+      - name: Check PR source
+        id: check_pr_source
+        uses: actions/github-script@v2
+        with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        # For PR-based events returns 'true' when the HEAD originates from a forked repo
+        # We do this to avoid security issues
+        script: |
+          return ( !github.event.pull_request.head.repo.full_name ? false : (github.event.pull_request.head.repo.full_name !== github.repository) )
+
   auto_merge:
     name: Auto-squash the PR
     runs-on: ubuntu-18.04
-    # Don't process PRs from forked repos
-    if:
-      github.event.pull_request.head.repo.full_name == github.repository
+    # Don't run when the triggering event originates from a forked repos
+    needs: check_pr_from_fork
+    if: !is_forked_pr
     steps:
       - name: Generate token
         id: generate_token
@@ -37,6 +53,7 @@ jobs:
         with:
           app_id: ${{ secrets.ENDJIN_BOT_APP_ID }}
           private_key: ${{ secrets.ENDJIN_BOT_PRIVATE_KEY }}
+      # This may not be strictly required, but should keep unmerged, closed PRs cleaner
       - name: Remove 'autosquash' label from closed PRs
         id: remove_autosquash_label_from_closed_prs
         uses: actions/github-script@v2
