--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -38,14 +38,29 @@ jobs:
           # For PR-based events returns 'true' when the HEAD originates from a forked repo
           # We do this to avoid security issues
           script: |
-            return ( (github.event.pull_request == undefined) ? false : (github.event.pull_request.head.repo.full_name !== github.repository) )
-
+            return ( !(context.payload.pull_request) ? false : (
+              context.payload.pull_request.head.repo.full_name !== context.payload.pull_request.base.repo.full_name)
+            );
+      - name: debug
+        run: |
+          echo "check_pr_source: ${{ steps.check_pr_source.outputs.result }}"
+  
+  debug:
+    name: Debug
+    runs-on: ubuntu-18.04
+    needs: check_pr_from_fork
+    steps:
+      - name: Debug
+        run: |
+          echo "is_forked_pr: ${{ needs.check_pr_from_fork.outputs.is_forked_pr }}"
+  
   auto_merge:
     name: Auto-squash the PR
     runs-on: ubuntu-18.04
     # Don't run when the triggering event originates from a forked repos
-    needs: check_pr_from_fork
-    if: (!needs.check_pr_from_fork.outputs.is_forked_pr)
+    needs: [debug,check_pr_from_fork]
+    if: |
+      !(needs.check_pr_from_fork.outputs.is_forked_pr)
     steps:
       - name: Generate token
         id: generate_token
