--- a/.github/workflows/reopen_dependabot_prs.yml
+++ b/.github/workflows/reopen_dependabot_prs.yml
@@ -19,7 +19,7 @@ jobs:
       id: reopen_prs
       uses: actions/github-script@v3
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: '${{ steps.generate_token.outputs.token }}'
         script: |
           const repo = context.payload.repository.owner.login + '/' + context.payload.repository.name
 
