--- a/.github/workflows/reopen_dependabot_prs.yml
+++ b/.github/workflows/reopen_dependabot_prs.yml
@@ -29,7 +29,7 @@ jobs:
 
           for (const pull of pulls.data.items) {
             console.log('Reopening PR:' + pull.title)
-            await github.issues.update({
+            await github.issues.createComment({
               owner: context.payload.repository.owner.login,
               repo: context.payload.repository.name,
               issue_number: pull.number,
