--- a/.github/workflows/reopen_dependabot_prs.yml
+++ b/.github/workflows/reopen_dependabot_prs.yml
@@ -13,8 +13,8 @@ jobs:
       id: generate_token
       uses: tibdex/github-app-token@v1
       with:
-        app_id: ${{ secrets.ENDJIN_BOT_APP_ID }}
-        private_key: ${{ secrets.ENDJIN_BOT_PRIVATE_KEY }}
+        app_id: ${{ secrets.DEPENDJINBOT_APP_ID }}
+        private_key: ${{ secrets.DEPENDJINBOT_PRIVATE_KEY }}
     - name: Reopen PRs
       id: reopen_prs
       uses: actions/github-script@v3
