--- a/.github/workflows/dependabot_approve_and_label.yml
+++ b/.github/workflows/dependabot_approve_and_label.yml
@@ -81,7 +81,7 @@ jobs:
           (needs.evaluate_dependabot_pr.outputs.semver_increment == 'minor' || needs.evaluate_dependabot_pr.outputs.semver_increment == 'patch')
         uses: actions/github-script@v2
         with:
-          github-token: '${{ steps.generate_token.outputs.token }}'
+          github-token: '${{ secrets.GITHUB_TOKEN }}'
           script: |
             await github.pulls.update({
               owner: context.payload.repository.owner.login,
@@ -95,12 +95,6 @@ jobs:
     needs: evaluate_dependabot_pr
     name: Label
     steps:
-      - name: Generate token
-        id: generate_token
-        uses: tibdex/github-app-token@v1
-        with:
-          app_id: ${{ secrets.ENDJIN_BOT_APP_ID }}
-          private_key: ${{ secrets.ENDJIN_BOT_PRIVATE_KEY }}
       - name: 'Label auto-mergeable dependabot PRs with "autosquash"'
         if: |
           (github.actor == 'dependabot[bot]' || github.actor == 'dependjinbot[bot]' || github.actor == 'nektos/act') &&
@@ -108,7 +102,7 @@ jobs:
           (needs.evaluate_dependabot_pr.outputs.semver_increment == 'minor' || needs.evaluate_dependabot_pr.outputs.semver_increment == 'patch')
         uses: actions/github-script@v2
         with:
-          github-token: '${{ steps.generate_token.outputs.token }}'
+          github-token: '${{ secrets.GITHUB_TOKEN }}'
           script: |
             await github.issues.addLabels({
               owner: context.payload.repository.owner.login,
