--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -63,6 +63,12 @@ jobs:
                 name: 'autosquash'
               });
             }
+      - name: Generate token
+        id: generate_token
+        uses: tibdex/github-app-token@v1
+        with:
+          app_id: ${{ secrets.ENDJIN_BOT_APP_ID }}
+          private_key: ${{ secrets.ENDJIN_BOT_PRIVATE_KEY }}
       - uses: endjin/autosquash@v2.4
         with:
-          github_token: '${{ secrets.GITHUB_TOKEN }}'
+          github_token: '${{ steps.generate_token.outputs.token }}'
