--- a/.github/workflows/auto_merge.yml
+++ b/.github/workflows/auto_merge.yml
@@ -63,12 +63,9 @@ jobs:
                 name: 'autosquash'
               });
             }
-      - name: Generate token
-        id: generate_token
-        uses: tibdex/github-app-token@v1
-        with:
-          app_id: ${{ secrets.ENDJIN_BOT_APP_ID }}
-          private_key: ${{ secrets.ENDJIN_BOT_PRIVATE_KEY }}
+      - run: gh api https://api.github.com/repos/endjin/dependency-playground/pulls/167
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: endjin/autosquash@v2.4
         with:
-          github_token: '${{ steps.generate_token.outputs.token }}'
+          github_token: '${{ secrets.GITHUB_TOKEN }}'
